--- a/space-tourism/src/pages/crew/components/CrewImage/CrewImage.css
+++ b/space-tourism/src/pages/crew/components/CrewImage/CrewImage.css
@@ -7,6 +7,10 @@
         @screen md {
             height: 50vh;
         }
+
+        @screen xl {
+            height: 100%;
+        }
     }
 
     &-img {
