--- a/space-tourism/src/pages/destination/DestinationPage.css
+++ b/space-tourism/src/pages/destination/DestinationPage.css
@@ -16,6 +16,10 @@
             margin-inline: auto;
             padding-block-end: 11.8rem;
         }
+
+        @screen xl {
+            padding-block-end: 0;
+        }
     }
 
     &-left {
