--- a/space-tourism/src/components/Header/Header.css
+++ b/space-tourism/src/components/Header/Header.css
@@ -9,7 +9,8 @@
     }
 
     @screen lg {
-        margin: 4rem auto 0;
+        padding-block: 4rem 0;
+        margin-inline: auto;
         margin-block-end: 7.6rem;
     }
 
