--- a/entertainment-web-app/src/app/globals.css
+++ b/entertainment-web-app/src/app/globals.css
@@ -1,7 +1,9 @@
-@import './styles/base.css';
-@import './styles/colors.css';
-@import './styles/ui.css';
-@import './styles/typography.css';
+@import './styles/base/base.css';
+@import './styles/base/colors.css';
+@import './styles/base/typography.css';
+@import 'styles/base/ui.css';
+
+@import './styles/components/buttons.css';
 
 @tailwind base;
 @tailwind components;
