--- a/entertainment-web-app/src/app/styles/base/base.css
+++ b/entertainment-web-app/src/app/styles/base/base.css
@@ -56,4 +56,8 @@
         border: 0;
         font-size: 62.5%; /* 10px/16px = 62.5% -> 1rem = 10px */
     }
+
+    body {
+        background-color: var(--color-dark-blue);
+    }
 }
