--- a/entertainment-web-app/src/app/styles/base/typography.css
+++ b/entertainment-web-app/src/app/styles/base/typography.css
@@ -19,6 +19,7 @@
         font-style: normal;
         font-weight: 400;
         line-height: normal;
+        color: var(--color-white);
     }
 
     .header-l {
