kpm: Build Sidebar components

--- a/entertainment-web-app/src/app/components/sidebar-icons/sidebar-icons.css
+++ b/entertainment-web-app/src/app/components/sidebar-icons/sidebar-icons.css
@@ -8,6 +8,11 @@
     }
 
     &-icon {
-
+        &:hover {
+            svg,
+            path {
+                fill: var(--color-red);
+            }
+        }
     }
 }
