kpm: Build bookmark components

--- a/entertainment-web-app/src/app/components/movie-item/movie-item.css
+++ b/entertainment-web-app/src/app/components/movie-item/movie-item.css
@@ -1,4 +1,6 @@
 .MovieItem {
+    position: relative;
+
     &-image {
         border-radius: var(--border-radius-s);
     }
@@ -10,7 +12,7 @@
         margin-block-start: .8rem;
     }
 
-    h2 {
+    &-title {
         margin-block-start: .8rem;
     }
 }
