--- a/entertainment-web-app/src/app/components/movie-item/movie-item.css
+++ b/entertainment-web-app/src/app/components/movie-item/movie-item.css
@@ -1,6 +1,61 @@
 .MovieItem {
     position: relative;
 
+    &:hover {
+        .MovieItem-overlay {
+            opacity: 1;
+            visibility: visible;
+            transition: var(--transiton-r);
+        }
+    }
+
+    &-imageContainer {
+        position: relative;
+    }
+
+    &-overlay {
+        position: absolute;
+        inset: 0;
+        border-radius: var(--border-radius-s);
+        background-color: rgba(0, 0, 0, .5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: var(--transiton-r);
+
+        /*set states*/
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    &-play {
+        position: absolute;
+        width: 117px;
+        height: 48px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        color: var(--color-white);
+
+        &::before {
+            content: '';
+            position: absolute;
+            opacity: 0.25;
+            background: var(--color-white);
+            display: block;
+            width: 100%;
+            height: 100%;
+            border-radius: 2.8rem;
+        }
+
+        .icon {
+            background-image: url('/assets/icon-play.svg');
+            width: 3rem;
+            height: 3rem;
+        }
+    }
+
     &-image {
         border-radius: var(--border-radius-s);
     }
