--- a/entertainment-web-app/src/app/styles/utilities/utilities.css
+++ b/entertainment-web-app/src/app/styles/utilities/utilities.css
@@ -5,7 +5,7 @@
         width: calc(var(--max-with-l) - calc(3.2rem * 2));
         display: grid;
         grid-template-columns: repeat(11, minmax(auto, 1fr));
-        grid-template-rows: repeat(11, minmax(auto, 1fr));
+        /*grid-template-rows: auto*/
         grid-column-gap: 3.6rem;
         grid-row-gap: 3.6rem;
         margin: 3.2rem auto 0;
