kpm: Refactor content components

--- a/entertainment-web-app/src/components/content-item/content-item.css
+++ b/entertainment-web-app/src/components/content-item/content-item.css
@@ -1,9 +1,9 @@
-.MovieItem {
+.ContentItem {
     position: relative;
 
-    .MovieItem-imageContainer {
+    .ContentItem-imageContainer {
         &:hover {
-            .MovieItem-overlay {
+            .ContentItem-overlay {
                 opacity: 1;
                 visibility: visible;
                 transition: var(--transiton-r);
