--- a/entertainment-web-app/src/components/search/search.css
+++ b/entertainment-web-app/src/components/search/search.css
@@ -31,6 +31,10 @@
 
         input {
             border-bottom: 1px solid var(--color-grey-blue);
+
+            &::placeholder {
+                opacity: 0.4979;
+            }
         }
     }
 
