kpm: Create show hide content while search

--- a/entertainment-web-app/src/styles/utilities/utilities.css
+++ b/entertainment-web-app/src/styles/utilities/utilities.css
@@ -14,10 +14,12 @@
     .isVisible {
         opacity: 1;
         visibility: visible;
+        transition: var(--transiton-r);
     }
 
     .isInvisible {
         opacity: 0;
         visibility: hidden;
+        transition: var(--transiton-r);
     }
 }
