--- a/entertainment-web-app/src/components/trending/trending.css
+++ b/entertainment-web-app/src/components/trending/trending.css
@@ -3,15 +3,12 @@
         display: flex;
         overflow-x: scroll;
         column-gap: 4rem;
+        scrollbar-width: none;
+        width: 100%;
+        height: 230px;
 
-        .ContentItem {
-            width: 100%;
-            min-width: 470px;
-
-            &-image {
-                object-fit: contain;
-                width: 470px;
-            }
+        &::-webkit-scrollbar {
+            display: none;
         }
     }
 }
