--- a/entertainment-web-app/src/components/trending/trending.css
+++ b/entertainment-web-app/src/components/trending/trending.css
@@ -1,11 +1,17 @@
 .Trending {
     &-items {
         display: flex;
-        overflow-x: scroll;
+        overflow-y: auto;
+        overflow-x: hidden;
         column-gap: 4rem;
         scrollbar-width: none;
         width: 100%;
         height: 230px;
+        margin-block-end: 4rem;
+
+        /*transform: rotate(-90deg);*/
+        /*transform-origin: right top;*/
+        /*transform: rotate(-90deg) translateY(-470px);*/
 
         &::-webkit-scrollbar {
             display: none;
