--- a/entertainment-web-app/src/components/content-item/content-item.css
+++ b/entertainment-web-app/src/components/content-item/content-item.css
@@ -62,34 +62,7 @@
         border-radius: var(--border-radius-s);
     }
 
-    &-meta {
-        display: flex;
-        align-items: center;
-        column-gap: .8rem;
-        margin-block-start: .8rem;
-
-        .category {
-            display: flex;
-            align-items: center;
-            column-gap: .6rem;
-        }
-
-        .icon {
-            width: 1.2rem;
-            height: 1.2rem;
-            display: block;
-
-            &.Movie {
-                background-image: url('/assets/icon-category-movie.svg');
-            }
-
-            &.TV {
-                background-image: url('/assets/icon-category-tv.svg');
-            }
-        }
-    }
-
-    &-title {
-        margin-block-start: .8rem;
+    .ContentMeta-title {
+        font-size: var(--font-size-header-xs);
     }
 }
