--- a/entertainment-web-app/src/components/trending/trending-item/trending-item.css
+++ b/entertainment-web-app/src/components/trending/trending-item/trending-item.css
@@ -16,7 +16,7 @@
         flex-direction: column;
         justify-content: flex-end;
         height: 100%;
-        z-index: 20;
+        z-index: 10;
         position: absolute;
         top: 0;
         width: 100%;
@@ -28,5 +28,9 @@
         width: 470px;
         max-width: 470px;
         height: 100%;
+    }
+
+    .ContentMeta-title {
+        font-size: var(--font-size-header-s);
     }
 }
