--- a/entertainment-web-app/src/components/sidebar/sidebar-icons/sidebar-icons.css
+++ b/entertainment-web-app/src/components/sidebar/sidebar-icons/sidebar-icons.css
@@ -4,7 +4,7 @@
     @screen xl {
         flex-direction: column;
         row-gap: 4rem;
-        margin-block-start: 7.4rem;
+        margin-block: 7.4rem auto;
     }
 
     &-icon {
