kpm: Update trending

--- a/entertainment-web-app/src/components/trending/trending-item/trending-item.css
+++ b/entertainment-web-app/src/components/trending/trending-item/trending-item.css
@@ -28,6 +28,7 @@
         width: 470px;
         max-width: 470px;
         height: 100%;
+        cursor: pointer;
     }
 
     .ContentMeta-title {
