--- a/entertainment-web-app/src/components/search/search.css
+++ b/entertainment-web-app/src/components/search/search.css
@@ -5,7 +5,7 @@
         grid-row-start: 1;
         grid-row-end: 1;
         height: 4.7rem;
-        margin-block: 3.2rem 3.4rem;
+        margin-block-start: 3.2rem;
     }
 
     form {
