kpm: Start the process of building the auth pages and components

--- a/entertainment-web-app/src/styles/components/buttons.css
+++ b/entertainment-web-app/src/styles/components/buttons.css
@@ -6,13 +6,15 @@
         font-weight: 300;
         line-height: normal;
         text-align: center;
-
+        padding-block: 1.6rem;
         background-color: var(--color-red);
         color: var(--color-white);
+        transition: var(--transiton-r);
 
         &:hover {
             background-color: var(--color-white);
             color: var(--color-semi-dark-blue);
+            transition: var(--transiton-r);
         }
     }
 }
