kpm: Start the process of building the auth panel

--- a/entertainment-web-app/src/components/auth/auth.css
+++ b/entertainment-web-app/src/components/auth/auth.css
@@ -4,6 +4,10 @@
     justify-content: flex-start;
     align-items: center;
 
+    &.isInvisible {
+        display: none;
+    }
+
     &-header {
         margin-block-start: 7.2rem;
     }
