--- a/entertainment-web-app/src/styles/utilities/utilities.css
+++ b/entertainment-web-app/src/styles/utilities/utilities.css
@@ -61,4 +61,19 @@
             row-gap: 3.2rem;
         }
     }
+
+    .AuthPoint {
+        opacity: 0;
+        visibility: hidden;
+        display: none;
+        transition: var(--transiton-r);
+
+        &.isVisible {
+            display: grid;
+            opacity: 1;
+            visibility: visible;
+            height: 100%;
+            transition: var(--transiton-r);
+        }
+    }
 }
