kpm: Create active icon states

--- a/entertainment-web-app/src/components/sidebar/sidebar-icons/sidebar-icons.css
+++ b/entertainment-web-app/src/components/sidebar/sidebar-icons/sidebar-icons.css
@@ -14,5 +14,11 @@
                 fill: var(--color-red);
             }
         }
+
+        &.isActive {
+            path {
+                fill: white;
+            }
+        }
     }
 }
