--- a/entertainment-web-app/src/components/sidebar/sidebar.css
+++ b/entertainment-web-app/src/components/sidebar/sidebar.css
@@ -1,23 +1,53 @@
 .SideBar {
     background-color: var(--color-semi-dark-blue);
-    border-radius: var(--border-radius-xl);
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    order: 1;
+    width: 100%;
+    max-width: 100vw;
+    height: 5.6rem;
+    padding-inline: 2.4rem;
+
+    @screen md {
+        border-radius: var(--border-radius-xl);
+        padding-inline: 3.2rem;
+    }
 
     @screen xl {
         grid-row-start: 1;
         grid-row-end: 12;
         height: 960px;
         flex-direction: column;
-        justify-content: space-between;
         padding-block-start: 3.2rem;
+        padding-inline: unset;
+    }
+
+    &-rootImage {
+        width: 2.5rem;
+        height: 2rem;
+
+        @screen md {
+            width: 3.2rem;
+            height: 2.5rem;
+        }
     }
 
     &-avatar {
         border: 1px solid var(--color-white);
         border-radius: 4rem;
-        width: 4rem;
-        height: 4rem;
-        margin-block-end: 2.4rem;
+        width: 2.4rem;
+        height: 2.4rem;
+
+        @screen md {
+            width: 3.2rem;
+            height: 3.2rem;
+        }
+
+        @screen xl {
+            margin-block-end: 2.4rem;
+            width: 4rem;
+            height: 4rem;
+        }
     }
 }
