kpm: Update mobile styles

--- a/entertainment-web-app/src/components/content-item/content-item.css
+++ b/entertainment-web-app/src/components/content-item/content-item.css
@@ -23,12 +23,17 @@
 
     &-play {
         position: absolute;
-        width: 117px;
-        height: 48px;
+        width: 80px;
+        height: 32px;
         display: flex;
         justify-content: space-around;
         align-items: center;
         color: var(--color-white);
+
+        @screen md {
+            width: 117px;
+            height: 48px;
+        }
 
         &::before {
             content: '';
@@ -43,8 +48,22 @@
 
         .icon {
             background-image: url('/assets/icon-play.svg');
-            width: 3rem;
-            height: 3rem;
+            background-size: contain;
+            width: 2rem;
+            height: 2rem;
+
+            @screen lg {
+                width: 3rem;
+                height: 3rem;
+            }
+        }
+
+        h4 {
+            font-size: 1.6rem;
+
+            @screen lg {
+                font-size: var(--font-size-header-xs);
+            }
         }
     }
 
