--- a/entertainment-web-app/src/styles/utilities/utilities.css
+++ b/entertainment-web-app/src/styles/utilities/utilities.css
@@ -4,8 +4,8 @@
 
         display: flex;
         flex-direction: column;
-        width: calc(var(--max-with-l) - calc(3.2rem * 2));
         margin: 0 auto 5.4rem;
+        width: 100%;
 
         @screen xl {
             display: grid;
@@ -13,6 +13,7 @@
             grid-template-rows: 8rem auto;
             grid-column-gap: 3.6rem;
             grid-row-gap: 3.6rem;
+            width: calc(var(--max-with-l) - calc(3.2rem * 2));
             margin: 3.2rem auto 5.4rem;
         }
     }
@@ -48,21 +49,31 @@
     }
 
     .Content {
+        padding-inline: 1.6rem;
+
         @screen xl {
             grid-column-start: 2;
             grid-column-end: 12;
             grid-row-start: 2;
             grid-row-end: 12;
+            padding-inline: 0;
         }
 
         &-header {
-            margin-block-end: 3.2rem;
+            margin-block-end: 2.4rem;
+
+            @screen xl {
+                margin-block-end: 3.2rem;
+            }
         }
     }
 
     .ItemContent {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1.6rem;
+
         @screen xl {
-            display: grid;
             grid-template-columns: repeat(4, minmax(auto, 1fr));
             column-gap: 4rem;
             row-gap: 3.2rem;
