--- a/entertainment-web-app/src/styles/utilities/utilities.css
+++ b/entertainment-web-app/src/styles/utilities/utilities.css
@@ -70,8 +70,14 @@
 
     .ItemContent {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, minmax(auto, 1fr));
         gap: 1.6rem;
+
+        @screen md {
+            grid-template-columns: repeat(3, minmax(auto, 1fr));
+            column-gap: 3.2rem;
+            row-gap: 2.4rem;
+        }
 
         @screen xl {
             grid-template-columns: repeat(4, minmax(auto, 1fr));
