kpm: Update mobile styles

--- a/entertainment-web-app/src/components/search/search.css
+++ b/entertainment-web-app/src/components/search/search.css
@@ -5,6 +5,10 @@
     max-width: 100vw;
     padding-inline: 1.6rem;
 
+    @screen md {
+        padding-inline: 2.4rem;
+    }
+
     @screen xl {
         grid-column-start: 2;
         grid-column-end: 12;
@@ -13,6 +17,7 @@
         width: 100%;
         height: 4.7rem;
         margin-block-start: 3.2rem;
+        padding-inline: unset;
     }
 
     form {
