--- a/entertainment-web-app/src/components/sidebar/sidebar-icons/sidebar-icons.css
+++ b/entertainment-web-app/src/components/sidebar/sidebar-icons/sidebar-icons.css
@@ -2,6 +2,10 @@
     display: flex;
     column-gap: 2.4rem;
 
+    @screen md {
+        row-gap: 3.2rem;
+    }
+
     @screen xl {
         flex-direction: column;
         row-gap: 4rem;
