--- a/entertainment-web-app/src/components/sidebar/sidebar.css
+++ b/entertainment-web-app/src/components/sidebar/sidebar.css
@@ -4,23 +4,29 @@
     justify-content: space-between;
     align-items: center;
     order: 1;
-    width: 100%;
+    width: auto;
     max-width: 100vw;
     height: 5.6rem;
     padding-inline: 2.4rem;
 
     @screen md {
         border-radius: var(--border-radius-xl);
-        padding-inline: 3.2rem;
+        padding-inline: 2.4rem;
+        margin-inline: 2.4rem;
+        margin-block-start: 2.4rem;
+        height: 7.2rem;
     }
 
     @screen xl {
         grid-row-start: 1;
         grid-row-end: 12;
+        width: 100%;
         height: 960px;
         flex-direction: column;
         padding-block-start: 3.2rem;
         padding-inline: unset;
+        margin-block-start: unset;
+        margin-inline: unset;
     }
 
     &-rootImage {
