--- a/entertainment-web-app/src/styles/utilities/utilities.css
+++ b/entertainment-web-app/src/styles/utilities/utilities.css
@@ -1,5 +1,5 @@
 @layer utilities {
-    .container {
+    .Container {
         --max-with-l: 1440px;
 
         display: flex;
@@ -51,6 +51,10 @@
     .Content {
         padding-inline: 1.6rem;
 
+        @screen md {
+            padding-inline: 2.4rem;
+        }
+
         @screen xl {
             grid-column-start: 2;
             grid-column-end: 12;
@@ -73,7 +77,7 @@
         grid-template-columns: repeat(2, minmax(auto, 1fr));
         gap: 1.6rem;
 
-        @screen md {
+        @screen lg {
             grid-template-columns: repeat(3, minmax(auto, 1fr));
             column-gap: 3.2rem;
             row-gap: 2.4rem;
