--- a/entertainment-web-app/src/styles/base/base.css
+++ b/entertainment-web-app/src/styles/base/base.css
@@ -59,5 +59,9 @@
 
     body {
         background-color: var(--color-dark-blue);
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
 }
