--- a/entertainment-web-app/src/components/auth/auth.css
+++ b/entertainment-web-app/src/components/auth/auth.css
@@ -24,13 +24,13 @@
         form {
             display: flex;
             flex-direction: column;
-            margin-block: 4rem;
+            margin-block: 4rem 0;
         }
 
         label {
             position: relative;
 
-            &:not(:first-of-type) {
+            &:last-of-type {
                 margin-block: 2.4rem 4rem;
             }
 
