kpm: Continue to update the auth functionality

--- a/entertainment-web-app/src/components/auth/auth.css
+++ b/entertainment-web-app/src/components/auth/auth.css
@@ -12,6 +12,14 @@
         margin-block-start: 7.2rem;
     }
 
+    &-warning {
+        position: absolute;
+        right: 0;
+        top: 1.2rem;
+        opacity: 0;
+        visibility: hidden;
+    }
+
     &-panel {
         background-color: var(--color-semi-dark-blue);
         border-radius: var(--border-radius-xl);
@@ -29,9 +37,10 @@
 
         label {
             position: relative;
+            margin-block-start: 2.4rem;
 
             &:last-of-type {
-                margin-block: 2.4rem 4rem;
+                margin-block-end: 4rem;
             }
 
             input {
@@ -41,25 +50,19 @@
                 padding: .8rem 0 1.8rem 1.6rem;
                 color: var(--color-white);
                 font-size: var(--font-size-body-m);
+                caret-color: var(--color-red);
 
                 &:focus {
                     outline: none;
                     border-bottom: 1px solid var(--color-white);
                 }
 
-                &::placeholder {
-                    /*font-size: var(--font-size-body-m);*/
+                /*Set our warning states*/
+                &.isValid ~ .Auth-warning {
+
                 }
-            }
 
-            span {
-                position: absolute;
-                right: 0;
-                top: 1.2rem;
-                opacity: 0;
-                visibility: hidden;
-
-                &.invalid {
+                &.isInvalid ~ .Auth-warning {
                     opacity: 1;
                     visibility: visible;
                 }
